--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 env_portfolio_bravo/
-.env
+config/.env
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/django
 # Edit at https://www.toptal.com/developers/gitignore?templates=django
