--- a/config/.env
+++ b/config/.env
@@ -1,2 +1,2 @@
-SECRET_KEY=*0&4708a%x^3si&7a94)gh67%9t2nzqdf2e*m7wu6bz3%xbe(8
-DATABASE_URL=postgresql://postgres:Qzo9vTx713mynxNQL1ui@containers-us-west-174.railway.app:6511/railway
+SECRET_KEY=<secret key>
+DATABASE_URL=<database url>
